--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "MIT",
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.12",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.2",
     "vue": "^2.5.21",
+    "vue-class-component": "^6.3.2",
     "vue-loader": "^15.5.0",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "vue-inversify": "https://github.com/declspec/vue-inversify.git"
   },
   "devDependencies": {
     "@types/vue": "^2.0.0"
