Some cleanup, added small components, started creating services

--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "Jason Larke",
   "license": "MIT",
   "dependencies": {
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "inversify": "^5.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "reflect-metadata": "^0.1.12",
+    "sass-loader": "^7.1.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.2",
     "vue": "^2.5.21",
     "vue-class-component": "^6.3.2",
-    "vue-inversify": "https://github.com/declspec/vue-inversify.git",
+    "vue-inversify": "^0.0.1",
     "vue-loader": "^15.5.0",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21",
