--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
         "outDir": "./bin/dist/",
-        "target": "es6",
+        "target": "es5",
         "strictNullChecks": true,
         "noImplicitThis": true,
         "noImplicitAny": true,
+        "lib": [ "es2015", "dom" ],
         "module": "es2015",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
